welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:3: error: ';' expected but 'return' found.
		case (a,b) if (a>=13 && a<=19) => if (b<13 || b>19) {return true} return false
                                                                                  ^loneTeen:4: error: ';' expected but 'return' found.
		case (a,b) if (b>=13 && b<=19) => if (a<13 || a>19) {return true} return false
                                                                                  ^